# ImageSearchEngineInOpenCV

./: .gitignore  CMakeLists.txt  README.md
cpp/: index.cpp  index.h  kdtree_generic.cpp  kdtree_recognition.cpp  searchdb.cpp  searchdb.h  surf.cpp  surf_.cpp
python/: converter.py  copy.py
